# personal-assistant

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/autoagents-core/src/agent/prebuilt/executor/: react.rs
crates/autoagents-experts/: Cargo.toml
crates/autoagents-experts/src/: coding.rs  lib.rs  ops.rs  path_policy.rs  redact.rs  sandbox.rs  tools.rs
crates/autoagents-memory/: Cargo.toml
crates/autoagents-memory/src/: db.rs  heartbeat.rs  lib.rs  preferences.rs  task.rs
crates/autoagents-server/: Cargo.toml
crates/autoagents-server/src/: config.rs  llm_provider.rs  main.rs  repl.rs  runner.rs
crates/autoagents-server/src/feishu/: api.rs  events.rs  mod.rs  security.rs  types.rs
crates/autoagents-server/src/tui/: app.rs  events.rs  mod.rs  ui.rs
crates/autoagents-supervisor/: Cargo.toml
crates/autoagents-supervisor/src/: dispatch.rs  intent.rs  lib.rs  session.rs
crates/autoagents-tool-auth/: Cargo.toml
crates/autoagents-tool-auth/src/: audit.rs  lib.rs  permissions.rs  shell.rs
deploy/: README.md  TEST_PLAN.md  build_and_deploy.sh  config.example.yaml  config.yaml  personal-assistant.service
examples/design_patterns/: Cargo.toml
