[package]
name = "autoagents-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Persistent memory layer with SQLite, heartbeat scheduler, and memory extraction"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]

[dependencies]
autoagents.workspace = true
autoagents-core.workspace = true
autoagents-llm.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rusqlite = { version = "0.34", features = ["bundled", "vtab"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
