[package]
name = "autoagents-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP server with Feishu Bot integration for personal assistant"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "personal-assistant"
path = "src/main.rs"

[dependencies]
autoagents.workspace = true
autoagents-core.workspace = true
autoagents-llm = { workspace = true, features = [
    "minimax", "deepseek",     # Chinese providers
    "openai", "anthropic",     # Global leaders
    "groq", "openrouter", "ollama",  # Speed / routing / local
    "google", "xai", "phind", "azure_openai",
] }
autoagents-supervisor = { path = "../autoagents-supervisor" }
autoagents-experts = { path = "../autoagents-experts" }
autoagents-tool-auth = { path = "../autoagents-tool-auth" }
autoagents-memory = { path = "../autoagents-memory" }
axum = { version = "0.8", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dotenvy = "0.15"
crossterm = { version = "0.28", features = ["event-stream"] }
textwrap = "0.16"
futures-util = { workspace = true }
ratatui = { version = "0.30", features = ["crossterm"] }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
tokio = { workspace = true }
bytes = { workspace = true }
# Security: Feishu event signature verification + constant-time compare.
# All three are already in the workspace lockfile transitively, so adding
# them here pulls in no new crates.
sha2 = "0.10"
hex = "0.4"
subtle = "2.6"
# AES-256-CBC to decrypt Feishu encrypt-key payloads.
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
base64 = "0.22"
