[package]
name = "autoagents-supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Supervisor agent - intent routing, task dispatch, context management, long-term memory"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
autoagents.workspace = true
autoagents-core.workspace = true
autoagents-derive.workspace = true
autoagents-llm.workspace = true
autoagents-toolkit.workspace = true
autoagents-tool-auth = { path = "../autoagents-tool-auth" }
autoagents-memory = { path = "../autoagents-memory" }
rusqlite = { version = "0.34", features = ["bundled"] }
# autoagents-experts is used via dispatch (not direct code dependency)
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
